fixed the form and spacing of nav elements

--- a/src/portfolio-rebuild/styles.css
+++ b/src/portfolio-rebuild/styles.css
@@ -28,6 +28,7 @@ body {
   width: 400px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 20px;
   margin-right: 10%;
 }
@@ -84,7 +85,7 @@ iframe {
 }
 
 .form {
-  width: 50%;
+  width: 40%;
   height: auto;
   border: 2px solid green;
   margin-bottom: 20px;
